Update Document Style and Layout beforing getting style's filter quality

Bug: 888458
Change-Id: Ib17eff8795d8daaa2e67f3c478f71079a52b9d5a
Reviewed-on: https://chromium-review.googlesource.com/c/1283488
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Fernando Serboncini <fserb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602398}
Former-commit-id: 371eb5a301557fbbe2edcccad9ba7d4796c7d89b